name: direct-plugins
version: 1.0
cabal-version: >= 1.2
build-type: Simple
license: BSD3
license-file: LICENSE
copyright: Copyright (c) 2009 Dan Knapp
author: Dan Knapp
maintainer: dankna@gmail.com
homepage: http://www.dankna.com/software/
bug-reports: http://www.dankna.com/issues/create/
category: Database
synopsis: Lightweight replacement for hs-plugins, specific to GHC
description:
  The hs-plugins package unfortunately does not work on GHC 6.12, and is at any rate
  rather poorly documented.  This package uses the same general strategy but without
  quite as many options, aiming to be simple and useful rather than complete.

Library
  exposed-modules: Plugins
  build-depends: base >= 4.1 && < 5
